--- a/backoffice.html
+++ b/backoffice.html
@@ -125,12 +125,12 @@
               </p>
             </div>
             <div class="col-sm-4 offset-md-1 py-4">
-              <h4>Contact</h4>
+              <h4>Menu</h4>
               <ul class="list-unstyled">
-                <li><a href="#" class="text-white">Follow on Instagram</a>
+                <li><a href="index.html" class="text-white">Shop</a>
                 </li>
-                <li><a href="#" class="text-white">Like on Facebook</a></li>
-                <li><a href="#" class="text-white">Email me</a></li>
+                <!-- <li><a href="#" class="text-white">Like on Facebook</a></li> -->
+               <!--  <li><a href="#" class="text-white">Email me</a></li> -->
               </ul>
             </div>
           </div>
@@ -139,13 +139,14 @@
       <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container">
           <a href="#" class="navbar-brand d-flex align-items-center">
+            <img class="super-mega-banana" src="/assets/banana-icon.svg" alt="banana">
             <!-- <img src="/assets/banana-icon.svg" alt="banana"> --> <!-- da inserire logo -->
               <path
                 d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"
               ></path>
               <circle cx="12" cy="13" r="4"></circle>
             </svg>
-            <strong>Marketplace</strong>
+            <h1>WAAAAANMABELLLLL</h1>
           </a>
           <button
             class="navbar-toggler"
@@ -166,6 +167,7 @@
      <div class="container">
       <div class="row">
         <form class="col-12 mt-5 col-lg-6 col-md-6 col-sm-12 needs-validation" novalidate="">
+          <h3 class="mb-4">Inserisci qui la tua riggiola:</h3>
           <label for="name-item" class="form-label">Nome prodotto</label>
           <input type="text" class="form-control mb-4" id="name-item" placeholder="Inserisci nome prodotto" value="" required="">
           <label for="brand-item" class="form-label">Brand</label>
@@ -174,16 +176,11 @@
           <input type="number" class="form-control mb-4" id="price-item" placeholder="Inserisci valore prodotto" value="" required="">
           <label for="img-item" class="form-label">Immagine prodotto</label>
           <input type="url" class="form-control mb-4" id="image-item" placeholder="Inserisci url immagine" value="" required="">
-
           <div class="form-group">
             <label for="description-item" class="form-label">Descrizione prodotto</label>
             <textarea class="form-control" id="description-item" placeholder="Inserisci descrizione dettagliata del prodotto" cols="20" rows="3"></textarea>
           </div>
-
           <button type="button" id="submitBtn" class="btn btn-dark mt-3">Crea prodotto</button>
-
-
-          
           </div>
         </form>
       </div>
