--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
               </p>
             </div>
             <div class="col-sm-4 offset-md-1 py-4">
-              <h4>Contact</h4>
+              <h4>Menu</h4>
               <ul class="list-unstyled">
                 <li><a href="index.html" class="text-white">Shop</a></li>
-                <li><a href="#" class="text-white">Like on Facebook</a></li>
+                <!-- <li><a href="#" class="text-white">Like on Facebook</a></li> -->
                 <li><a href="backoffice.html" class="text-white">Aggiungi prodotto</a></li>
               </ul>
             </div>
@@ -138,13 +138,12 @@
       <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container">
           <a href="#" class="navbar-brand d-flex align-items-center">
-            <img src="/assets/banana-icon.svg" alt="banana">
+            <img class="super-mega-banana" src="/assets/banana-icon.svg" alt="banana">
               <path
                 d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"
               ></path>
               <circle cx="12" cy="13" r="4"></circle>
-            </svg>
-            <strong>Marketplace</strong>
+            <h1>WAAAAANMABELLLLL</h1>
           </a>
           <button
             class="navbar-toggler"
@@ -165,11 +164,8 @@
       <section class="py-5 text-center container">
         <div class="row py-lg-5">
           <div class="col-lg-6 col-md-8 mx-auto">
-            <h1 class="fw-light">Album example</h1>
-            <p class="lead text-body-secondary">
-              Something short and leading about the collection below—its
-              contents, the creator, etc. Make it short and sweet, but not too
-              short so folks don’t simply skip over it entirely.
+            <h1 class="fw-light">WAAAAANMABELLLLL</h1>
+            <p class="lead text-body-secondary">il primo shop online dove puoi comprare mattoni di ogni genere per fare i pacchi alla gente
             </p>
             <p>
               <a href="#" class="btn btn-primary my-2">Main call to action</a>
