--- a/backoffice.html
+++ b/backoffice.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <!-- Favicon -->
-    <link rel="icon" href="/assets/banana-icon.svg" type="image/svg">
+    <!-- <link rel="icon" href="/assets/banana-icon.svg" type="image/svg"> -->
     <!-- Css -->
     <link rel="stylesheet" href="style.css" />
     <title>Marketplace</title>
@@ -139,7 +139,7 @@
       <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container">
           <a href="#" class="navbar-brand d-flex align-items-center">
-            <img class="super-mega-banana" src="/assets/banana-icon.svg" alt="banana">
+            <!-- <img class="super-mega-banana" src="/assets/banana-icon.svg" alt="banana"> -->
             <!-- <img src="/assets/banana-icon.svg" alt="banana"> --> <!-- da inserire logo -->
               <path
                 d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"
@@ -182,6 +182,10 @@
           </div>
           <button type="button" id="submitBtn" class="btn btn-dark mt-3">Crea prodotto</button>
           </div>
+
+          <div id="resultCard">
+
+          </div>
         </form>
       </div>
      </div>
@@ -205,16 +209,6 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    ></script>
     <script src="backoffice.js"></script>
   </body>
 </html>
