--- a/backoffice.html
+++ b/backoffice.html
@@ -184,7 +184,7 @@
           </div>
 
           <div id="resultCard">
-
+            <!-- div vuoto per inserimento card prodotti -->
           </div>
         </form>
       </div>
