--- a/backoffice.html
+++ b/backoffice.html
@@ -183,8 +183,9 @@
           <button type="button" id="submitBtn" class="btn btn-dark mt-3">Crea prodotto</button>
           </div>
 
-          <div id="resultCard">
+          <div id="product-card">
             <!-- div vuoto per inserimento card prodotti -->
+            <h2 class="mt-4">Prodotti:</h2>
           </div>
         </form>
       </div>
