implementazione foreach in get per ciclare e creare cards TODO finire l'implementazione

--- a/backoffice.html
+++ b/backoffice.html
@@ -182,10 +182,11 @@
           </div>
           <button type="button" id="submitBtn" class="btn btn-dark mt-3">Crea prodotto</button>
           </div>
-
-          <div id="product-card">
-            <!-- div vuoto per inserimento card prodotti -->
+          <div class="category">
             <h2 class="mt-4">Prodotti:</h2>
+            <div id="product-card">
+            <!-- div vuoto per inserimento card prodotti -->
+          </div>
           </div>
         </form>
       </div>
