--- a/index/index.html
+++ b/index/index.html
@@ -10,8 +10,10 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <!-- Boostrap icon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Favicon -->
-    <!-- <link rel="icon" href="/assets/banana-icon.svg" type="image/svg"> -->
+    <link rel="icon" href="/home/assets/banana-icon.svg" type="image/svg">
     <!-- Css -->
     <link rel="stylesheet" href="style.css" />
     <title>Marketplace</title>
@@ -43,76 +45,6 @@
       </symbol>
     </svg>
 
-    <div
-      class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle"
-    >
-      <button
-        class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center"
-        id="bd-theme"
-        type="button"
-        aria-expanded="false"
-        data-bs-toggle="dropdown"
-        aria-label="Toggle theme (light)"
-      >
-        <svg class="bi my-1 theme-icon-active" width="1em" height="1em">
-          <use href="#sun-fill"></use>
-        </svg>
-        <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
-      </button>
-      <ul
-        class="dropdown-menu dropdown-menu-end shadow"
-        aria-labelledby="bd-theme-text"
-      >
-        <li>
-          <button
-            type="button"
-            class="dropdown-item d-flex align-items-center active"
-            data-bs-theme-value="light"
-            aria-pressed="true"
-          >
-            <svg class="bi me-2 opacity-50" width="1em" height="1em">
-              <use href="#sun-fill"></use>
-            </svg>
-            Light
-            <svg class="bi ms-auto d-none" width="1em" height="1em">
-              <use href="#check2"></use>
-            </svg>
-          </button>
-        </li>
-        <li>
-          <button
-            type="button"
-            class="dropdown-item d-flex align-items-center"
-            data-bs-theme-value="dark"
-            aria-pressed="false"
-          >
-            <svg class="bi me-2 opacity-50" width="1em" height="1em">
-              <use href="#moon-stars-fill"></use>
-            </svg>
-            Dark
-            <svg class="bi ms-auto d-none" width="1em" height="1em">
-              <use href="#check2"></use>
-            </svg>
-          </button>
-        </li>
-        <li>
-          <button
-            type="button"
-            class="dropdown-item d-flex align-items-center"
-            data-bs-theme-value="auto"
-            aria-pressed="false"
-          >
-            <svg class="bi me-2 opacity-50" width="1em" height="1em">
-              <use href="#circle-half"></use>
-            </svg>
-            Auto
-            <svg class="bi ms-auto d-none" width="1em" height="1em">
-              <use href="#check2"></use>
-            </svg>
-          </button>
-        </li>
-      </ul>
-    </div>
 
     <header data-bs-theme="dark">
       <div class="collapse text-bg-dark" id="navbarHeader">
@@ -121,16 +53,15 @@
             <div class="col-sm-8 col-md-7 py-4">
               <h6>About</h6>
               <p class="text-body-secondary">
-                "un bel copy super accattivante"
+                "Un bel copy accattivante"
               </p>
             </div>
             <div class="col-sm-4 offset-md-1 py-4">
               <h4>Menu</h4>
               <ul class="list-unstyled">
-                <li><a href="index.html" class="text-white">Shop</a>
-                </li>
+                <li><a href="index.html" class="text-white">Shop</a></li>
                 <!-- <li><a href="#" class="text-white">Like on Facebook</a></li> -->
-               <!--  <li><a href="#" class="text-white">Email me</a></li> -->
+                <li><a href="/home/backoffice/backoffice.html" class="text-white">Aggiungi prodotto</a></li>
               </ul>
             </div>
           </div>
@@ -139,13 +70,11 @@
       <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container">
           <a href="#" class="navbar-brand d-flex align-items-center">
-            <!-- <img class="super-mega-banana" src="/assets/banana-icon.svg" alt="banana"> -->
-            <!-- <img src="/assets/banana-icon.svg" alt="banana"> --> <!-- da inserire logo -->
+            <img class="super-mega-banana" src="/home/assets/banana-icon.svg" alt="banana">
               <path
                 d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"
               ></path>
               <circle cx="12" cy="13" r="4"></circle>
-            </svg>
             <h1>WAAAAANMABELLLLL</h1>
           </a>
           <button
@@ -164,33 +93,30 @@
     </header>
 
     <main>
-     <div class="container">
-      <div class="row">
-        <form class="col-12 mt-5 col-lg-6 col-md-6 col-sm-12 needs-validation" novalidate="">
-          <h3 class="mb-4">Inserisci qui la tua riggiola:</h3>
-          <label for="name-item" class="form-label">Nome prodotto</label>
-          <input type="text" class="form-control mb-4" id="name-item" placeholder="Inserisci nome prodotto" value="" required="">
-          <label for="brand-item" class="form-label">Brand</label>
-          <input type="text" class="form-control mb-4" id="brand-item" placeholder="Inserisci nome brand" value="" required="">
-          <label for="price-item" class="form-label">Prezzo prodotto</label>
-          <input type="number" class="form-control mb-4" id="price-item" placeholder="Inserisci valore prodotto" value="" required="">
-          <label for="img-item" class="form-label">Immagine prodotto</label>
-          <input type="url" class="form-control mb-4" id="image-item" placeholder="Inserisci url immagine" value="" required="">
-          <div class="form-group">
-            <label for="description-item" class="form-label">Descrizione prodotto</label>
-            <textarea class="form-control" id="description-item" placeholder="Inserisci descrizione dettagliata del prodotto" cols="20" rows="3"></textarea>
+      <section class="py-5 text-center container">
+        <div class="row py-lg-5">
+          <div class="col-lg-6 col-md-8 mx-auto">
+            <h1 class="fw-light">WAAAAANMABELLLLL</h1>
+            <p class="lead text-body-secondary">il primo shop online dove puoi comprare mattoni di ogni genere per fare i pacchi alla gente
+            </p>
+            <p>
+              <a href="#" class="btn btn-primary my-2">Main call to action</a>
+              <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+            </p>
           </div>
-          <button type="button" id="submitBtn" class="btn btn-dark mt-3">Crea prodotto</button>
+        </div>
+      </section>
+
+      <div class="album py-5 bg-body-tertiary">
+        <div class="container">
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+            <div id="product-card" class="col">
+              
+            </div>
           </div>
-          <div class="category">
-            <h2 class="mt-4">Prodotti:</h2>
-            <div id="product-card">
-            <!-- div vuoto per inserimento card prodotti -->
-          </div>
-          </div>
-        </form>
+        </div>
       </div>
-     </div>
     </main>
 
     <footer class="text-body-secondary py-5">
@@ -211,6 +137,7 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="backoffice.js"></script>
+    
+    <script src="script.js"></script>
   </body>
 </html>
