modifiche collagamenti pagine, creazione pag FAQ, creazione media query mobile, COPY, link social-icons COPY FAQ in table

--- a/backoffice/backoffice.html
+++ b/backoffice/backoffice.html
@@ -11,10 +11,10 @@
       crossorigin="anonymous"
     />
     <!-- Favicon -->
-    <link rel="icon" href="/home/assets/banana-icon.svg" type="image/svg">
+    <link rel="icon" href="/assets/banana-icon.svg" type="image/svg">
     <!-- Css -->
-    <link rel="stylesheet" href="/home/index/style.css" />
-    <title>Marketplace</title>
+    <link rel="stylesheet" href="/index/style.css" />
+    <title>ReThink - Backoffice</title>
   </head>
   <body cz-shortcut-listen="true">
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -48,18 +48,26 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-8 col-md-7 py-4">
-              <h6>About</h6>
+              <h6>Portale privato</h6>
               <p class="text-body-secondary">
-                "un bel copy super accattivante"
+                Inserisci i prodotti
+                <br>
+                RICORDA: compila tutti i campi richiesti
               </p>
+              <!-- sezione icons -->
+              <div class="social-icon d-flex">
+                <i class="bi bi-facebook  m-2"></i>
+                <i class="bi bi-twitter  m-2"></i>
+                <i class="bi bi-instagram  m-2"></i>
+                <i class="bi bi-whatsapp  m-2"></i>
+              </div>
             </div>
             <div class="col-sm-4 offset-md-1 py-4">
               <h4>Menu</h4>
               <ul class="list-unstyled">
-                <li><a href="/home/index/index.html" class="text-white">Shop</a>
+                <li>
+                  <a href="/index/index.html" class="text-white">Shop</a>
                 </li>
-                <!-- <li><a href="#" class="text-white">Like on Facebook</a></li> -->
-               <!--  <li><a href="#" class="text-white">Email me</a></li> -->
               </ul>
             </div>
           </div>
@@ -67,15 +75,9 @@
       </div>
       <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container">
-          <a href="#" class="navbar-brand d-flex align-items-center">
-            
-            <img class="super-mega-banana" src="/home/assets/banana-icon.svg" alt="banana">
-              <path
-                d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"
-              ></path>
-              <circle cx="12" cy="13" r="4"></circle>
-            </svg>
-            <h1>WAAAAANMABELLLLL</h1>
+          <a href="/index/index.html" class="navbar-brand d-flex align-items-center">
+            <img class="super-mega-banana" src="/assets/banana-icon.svg" alt="banana">
+            <h2>ReThinK</h2>
           </a>
           <button
             class="navbar-toggler"
@@ -96,7 +98,7 @@
      <div class="container">
       <div class="row d-flex justify-content-around">
         <form class="col-9 mt-5 col-lg-6 col-md-6 col-sm-12 needs-validation" novalidate="">
-          <h3 class="mb-4">Inserisci qui la tua riggiola:</h3>
+          <h3 class="mb-4">Inserisci prodotto:</h3>
           <label for="name-item" class="form-label">Nome prodotto</label>
           <input type="text" class="form-control mb-4" id="name-item" placeholder="Inserisci nome prodotto" value="" required>
           <label for="brand-item" class="form-label">Brand</label>
@@ -125,19 +127,9 @@
 
     <footer class="text-body-secondary py-5">
       <div class="container">
-        <p class="float-end mb-1">
-          <a href="#">Back to top</a>
-        </p>
         <p class="mb-1">
-          Album example is © Bootstrap, but please download and customize it for
-          yourself!
-        </p>
-        <p class="mb-0">
-          New to Bootstrap? <a href="/">Visit the homepage</a> or read our
-          <a href="/docs/5.3/getting-started/introduction/"
-            >getting started guide</a
-          >.
-        </p>
+          Marketplace esempio per compito di fine modulo, © Epicode. Forza Napoli.
+        </p>            
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
