implementazione button modifica, visualizzazioni card in homepage, modificato cards e visualizzazione src card

--- a/backoffice/backoffice.html
+++ b/backoffice/backoffice.html
@@ -113,11 +113,48 @@
           </div>
           <button type="button" id="submitBtn" class="btn btn-dark mt-3">Crea prodotto</button>
         </div>
+        <div class="col-9 mt-5 col-lg-6 col-md-6 col-sm-12">
+          <!-- Modal per la modifica del prodotto -->
+<div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editModalLabel">Modifica Prodotto</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <!-- Form per la modifica del prodotto -->
+        <form id="editForm">
+          <div class="mb-3">
+            <label for="edit-name" class="form-label">Nome</label>
+            <input type="text" class="form-control" id="edit-name" required>
+          </div>
+          <div class="mb-3">
+            <label for="edit-brand" class="form-label">Marca</label>
+            <input type="text" class="form-control" id="edit-brand" required>
+          </div>
+          <div class="mb-3">
+            <label for="edit-price" class="form-label">Prezzo</label>
+            <input type="number" class="form-control" id="edit-price" required>
+          </div>
+          <div class="mb-3">
+            <label for="edit-image" class="form-label">URL Immagine</label>
+            <input type="url" class="form-control" id="edit-image" required>
+          </div>
+          <div class="mb-3">
+            <label for="edit-description" class="form-label">Descrizione</label>
+            <textarea class="form-control" id="edit-description" rows="3" required></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Salva modifiche</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
         <h2 class="mt-4 mb-4">Prodotti inseriti:</h2>
         <div id="container-cards" class="container-fluid row d-flex col-12 justify-content-around">
         
-
-          </div>
         </div>
       </div>
         </form>
