--- a/index/index.html
+++ b/index/index.html
@@ -107,19 +107,12 @@
           </div>
         </div>
       </section>
-
       <div class="album py-5 bg-body-tertiary">
-        <div class="container">
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div id="container-cards" class="d-flex">
 
-            <div id="product-card" class="col">
-              
-            </div>
-          </div>
         </div>
       </div>
     </main>
-
     <footer class="text-body-secondary py-5">
       <div class="container">
         <p class="mb-1">
