modifiche html css homepage

--- a/index/index.html
+++ b/index/index.html
@@ -98,13 +98,29 @@
     <main>
       <section class="py-5 text-center container">
         <div class="row py-lg-5">
-          <div class="col-lg-6 col-md-8 mx-auto">
-            <h1 class="fw-light text-body-secondary">ReThinK</h1>
-            <p class="lead text-body-secondary">
-              Sicurezza e Garanzia al 100%!<br>
-              Scegli con fiducia i nostri prodotti ricondizionati, sottoposti a rigorosi test di qualità per garantire prestazioni affidabili. Ogni dispositivo è accompagnato da una solida assicurazione che ti protegge e ti offre tranquillità.
-            </p>
-          </div>
+          <!-- <div class="col-lg-6 col-md-8 mx-auto"> -->
+            <h1 class="fw-light text-body-secondary mb-5">ReThinK</h1>
+            <div class="container-content text-body-secondary">
+              <div class="first-content d-flex align-items-center ">
+                <div class="first-content-icon d-flex justify-content-center align-items-center ">
+                  <i class="bi bi-shield-lock"></i>
+                </div>
+                <p>Sicurezza e Garanzia al 100% </p>
+              </div>
+              <div class="second-content d-flex align-items-center">
+                <div class="second-content-icon d-flex justify-content-center align-items-center">
+                  <i class="bi bi-phone-flip"></i>
+                </div>
+                <p>Test di qualità per garantire prestazioni affidabili.</p>
+              </div>
+              <div class="third-content d-flex align-items-center">
+                <div class="third-content-icon d-flex justify-content-center align-items-center ">
+                  <i class="bi bi-bookmark-check"></i>
+                </div>
+               <p>Assicurazione sui nostri prodotti</p>
+              </div>
+            </div>
+          <!-- </div> -->
         </div>
       </section>
       <div class="album py-5 bg-body-tertiary">
