Edit FAQ footer in homepage

--- a/index/index.html
+++ b/index/index.html
@@ -135,7 +135,7 @@
           Marketplace esempio per compito di fine modulo, © Epicode. Forza Napoli.
         </p>
         <p class="mb-0">
-          Non sei sicuro di acquistare un prodotto ricondizionato? Qui le domande più frequenti: <a href="https://www.rethink.it">FAQ</a>
+          Non sei sicuro di acquistare un prodotto ricondizionato? Qui le domande più frequenti: <a href="/index/FAQ.html">FAQ</a>
         </p>
         <div class="social-icon mt-5 p-3 text-center">
           <i class="bi bi-facebook m-2"></i>
