--- a/index/index.html
+++ b/index/index.html
@@ -96,9 +96,9 @@
     </header>
 
     <main>
+      <!-- MAIN CONTENT -->
       <section class="py-5 text-center container">
         <div class="row py-lg-5">
-          <!-- <div class="col-lg-6 col-md-8 mx-auto"> -->
             <h1 class="fw-light text-body-secondary mb-5">ReThinK</h1>
             <div class="container-content text-body-secondary">
               <div class="first-content d-flex align-items-center ">
@@ -111,7 +111,7 @@
                 <div class="second-content-icon d-flex justify-content-center align-items-center">
                   <i class="bi bi-phone-flip"></i>
                 </div>
-                <p>Test di qualità per garantire prestazioni affidabili.</p>
+                <p>Test di qualità per garantire prestazioni affidabili</p>
               </div>
               <div class="third-content d-flex align-items-center">
                 <div class="third-content-icon d-flex justify-content-center align-items-center ">
@@ -120,12 +120,11 @@
                <p>Assicurazione sui nostri prodotti</p>
               </div>
             </div>
-          <!-- </div> -->
         </div>
       </section>
       <div class="album py-5 bg-body-tertiary">
         <div id="container-cards" class="d-flex">
-
+          <!-- visualizzazioni card -->
         </div>
       </div>
     </main>
