--- a/services/dataSecurity.html
+++ b/services/dataSecurity.html
@@ -15,8 +15,8 @@
     <!-- Favicon -->
     <link rel="icon" href="/assets/banana-icon.svg" type="image/svg">
     <!-- Css -->
-    <link rel="stylesheet" href="style.css" />
-    <title>ReThink - Customer Service</title>
+    <link rel="stylesheet" href="/index/style.css" />
+    <title>ReThink - Sicurezza</title>
   </head>
   <body cz-shortcut-listen="true">
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -67,9 +67,7 @@
               <h4>Menu</h4>
               <ul class="list-unstyled">
                 <li><a href="index.html" class="text-white">Shop</a></li>
-                <li><a href="/backoffice/backoffice.html" class="text-white">Aggiungi prodotto</a></li>
-                <li><a href="/services/dataSecurity.html" class="text-white">Supporto</a></li>
-                <li><a href="/services/customerSupport.html" class="text-white">Privacy</a></li>
+                <li><a href="/services/customerSupport.html" class="text-white">Supporto</a></li>
                 <li><a href="/services/certificate.html" class="text-white">Certificazioni</a></li>
                 <li><a href="/services/FAQ.html" class="text-white">FAQ</a></li>
               </ul>
@@ -99,7 +97,7 @@
     </header>
 
     <main>
-      <!-- MAIN CONTENT -->
+      <!-- MENU -->
       <section class="py-5 text-center">
         <div class="container" id="container-content">
             <h1 class="fw-light text-body-secondary mb-5">ReThinK</h1>
@@ -109,7 +107,7 @@
             <div class="col">
               <a
                 href="/services/dataSecurity.html"
-                class="list-group-item list-group-item-action d-flex gap-3 py-3"
+                class="list-group-item list-group-item-action d-flex gap-3 py-3" id="list-group-security"
                 aria-current="true"
               >
               <div class="list-group-icon-box">
@@ -158,29 +156,21 @@
               </a>
             </div>
       </section>
-        <div  class="container">
-          <div class="row">
-            <div id="container-cards" class="container-fluid row d-flex col-12 justify-content-around">
-              <!-- visualizzazione cards -->
-            </div>
-          </div>
+      <!-- MAIN CONTENT -->
+      <div class="bg-body-tertiary me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="content-privacy my-3 p-3">
+          <h2 class="display-5">Sicurezza</h2>
+          <table>
+            <tr>
+                <th colspan="2">ReThink - Sicurezza dei Prodotti Ricondizionati</th>
+            </tr>
+            <tr>
+                <td colspan="2">Presso ReThink, la sicurezza dei nostri prodotti ricondizionati è una priorità ineguagliabile. Ogni dispositivo che offriamo è sottoposto a un rigoroso processo di controllo e revisione per garantire che sia al massimo delle prestazioni e della sicurezza. Collaboriamo solo con fornitori fidati e rispettabili, che seguono protocolli accurati per eliminare qualsiasi rischio di compromissione della sicurezza. Inoltre, ci impegniamo a fornire aggiornamenti regolari e patch di sicurezza per proteggere i tuoi dispositivi da eventuali minacce informatiche. Puoi fare acquisti su ReThink con la certezza che ogni prodotto è stato accuratamente testato e garantito sicuro per l'uso. Scegli ReThink per la tranquillità di un acquisto senza rischi e la sicurezza dei tuoi dispositivi.</td>
+            </tr>
+        </table>
         </div>
-        <!-- modal section -->
-        <div class="modal fade" id="productModal" tabindex="-1" aria-labelledby="productModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="productModalLabel">Dettagli Prodotto</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <div id="productDetails">
-                  <!-- Qui verranno inseriti dinamicamente i dettagli del prodotto -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 100px; border-radius: 21px 21px 0 0;"></div>
+      </div>
     </main>
     <footer class="text-body-sec py-5">
       <div class="container d-flex">
@@ -207,6 +197,5 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-    <script src="script.js"></script>
   </body>
 </html>
