--- a/services/dataSecurity.html
+++ b/services/dataSecurity.html
@@ -66,7 +66,7 @@
             <div class="col-sm-4 offset-md-1 py-4">
               <h4>Menu</h4>
               <ul class="list-unstyled">
-                <li><a href="index.html" class="text-white">Shop</a></li>
+                <li><a href="/index/index.html" class="text-white">Shop</a></li>
                 <li><a href="/services/customerSupport.html" class="text-white">Supporto</a></li>
                 <li><a href="/services/certificate.html" class="text-white">Certificazioni</a></li>
                 <li><a href="/services/FAQ.html" class="text-white">FAQ</a></li>
@@ -169,7 +169,6 @@
             </tr>
         </table>
         </div>
-        <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 100px; border-radius: 21px 21px 0 0;"></div>
       </div>
     </main>
     <footer class="text-body-sec py-5">
